tests/should_fail/const_d.c
int main(void) {
}

int func(int arr[const 11]) {
	arr += 3;
	return arr;
}
